# colorasion

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.in  README.md  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  flake.nix  guix.scm
autom4te.cache/: output.0  requests  traces.0
data/: Makefile  Makefile.am  Makefile.in  colorasion.xml
data/controller/: gamepad.scm  keyboard.scm
src/: Makefile  Makefile.am  Makefile.in  alist.cxx  alist.hxx  assert.hxx  background.cxx  background.hxx  ball.cxx  ball.hxx  ball_manager.cxx  ball_manager.hxx  colorasion  colorasion_main.cxx  colorasion_main.hxx  colors.cxx  colors.hxx  command_line.hxx  controller_def.cxx  controller_def.hxx  diamond.cxx  diamond.hxx  feuerkraft_error.hxx  game_config.cxx  game_config.hxx  game_obj.cxx  game_obj.hxx  game_world.cxx  game_world.hxx  guile.cxx  guile.hxx  math.cxx  math.hxx  resources.cxx  resources.hxx  ship.cxx  ship.hxx  string_converter.cxx  string_converter.hxx  vector2d.cxx  (+1 more)
src/input/: Makefile  Makefile.am  Makefile.in  axis_button.cxx  axis_button.hxx  axis_factory.cxx  axis_factory.hxx  button_axis.cxx  button_axis.hxx  button_factory.cxx  button_factory.hxx  controller.cxx  controller.hxx  input_axis.hxx  input_axis_input_device.cxx  input_axis_input_device.hxx  input_button.hxx  input_button_input_device.cxx  input_button_input_device.hxx  input_event.hxx  input_manager.cxx  input_manager.hxx  input_manager_custom.cxx  input_manager_custom.hxx  input_manager_impl.cxx  input_manager_impl.hxx  input_manager_player.cxx  input_manager_player.hxx  input_recorder.cxx  input_recorder.hxx
