SUBDIRS = input

bindir=$(prefix)/games

bin_PROGRAMS = colorasion

LDADD = \
 input/libfeuerkraft_input.a

colorasion_SOURCES =  \
  colorasion_main.hxx \
  colorasion_main.cxx \
  game_config.hxx \
  game_config.cxx \
  feuerkraft_error.hxx \
  assert.hxx \
  colors.hxx \
  colors.cxx \
  controller_def.hxx \
  controller_def.cxx \
  alist.hxx \
  alist.cxx \
  vector2d.hxx \
  vector2d.cxx \
  string_converter.hxx \
  string_converter.cxx \
  ball_manager.hxx \
  ball_manager.cxx \
  diamond.hxx \
  diamond.cxx \
  ball.hxx \
  ball.cxx \
  ship.cxx \
  ship.hxx \
  resources.hxx \
  resources.cxx \
  background.hxx \
  background.cxx \
  guile.hxx \
  guile.cxx \
  math.hxx \
  math.cxx \
  game_world.hxx \
  game_world.cxx \
  game_obj.hxx \
  game_obj.cxx

# EOF #
